--- a/settings.yml
+++ b/settings.yml
@@ -4,6 +4,10 @@
   description: Where you're boarding
   required: true
   options:
+  - 12th St. Oakland City Center: 12TH
+  - 16th St. Mission: 16TH
+  - 19th St. Oakland: 19TH
+  - 24th St. Mission: 24TH
   - Antioch: ANTC
   - Ashby: ASHB
   - Balboa Park: BALB
@@ -57,6 +61,10 @@
   description: Where you're headed
   required: true
   options:
+  - 12th St. Oakland City Center: 12TH
+  - 16th St. Mission: 16TH
+  - 19th St. Oakland: 19TH
+  - 24th St. Mission: 24TH
   - Antioch: ANTC
   - Ashby: ASHB
   - Balboa Park: BALB
