--- a/settings.yml
+++ b/settings.yml
@@ -9,12 +9,11 @@ polling_headers: ''
 polling_body: ''
 id: 181434
 custom_fields:
-- keyname: bart_origin_station
-  field_type: select
-  name: BART Origin Station
-  description: Where you're boarding
-  required: true
-  options:
+ options:
+  - 12th Street Oakland: 12TH
+  - 16th Street Mission: 16TH
+  - 19th Steet Oakland: 19TH
+  - 24th Street Mission: 24TH
   - Antioch: ANTC
   - Ashby: ASHB
   - Balboa Park: BALB
@@ -61,12 +60,17 @@ custom_fields:
   - Walnut Creek: WCRK
   - West Dublin / Pleasanton: WDUB
   - West Oakland: WOAK
+
 - keyname: bart_destination_station
   field_type: select
   name: BART Destination Station
   description: Where you're headed
   required: true
   options:
+  - 12th Street Oakland: 12TH
+  - 16th Street Mission: 16TH
+  - 19th Steet Oakland: 19TH
+  - 24th Street Mission: 24TH
   - Antioch: ANTC
   - Ashby: ASHB
   - Balboa Park: BALB
@@ -113,12 +117,11 @@ custom_fields:
   - Walnut Creek: WCRK
   - West Dublin / Pleasanton: WDUB
   - West Oakland: WOAK
+
 - keyname: author_bio
   field_type: author_bio
   name: About This Plugin
-  description: Real-time BART commute times at a glance. Displays next 3 departures and arrival times on your TRMNL e-ink device with zero infrastructure.
-  github_url: https://github.com/jetsharklambo
+  description: Real-time Bay Area Rapid Transit commute times at a glance. Displays next 3 departures and arrival times between any two BART stations on your TRMNL.
+  github_url: https://github.com/jetsharklambo/BARTcom-TRMNL
   learn_more_url: https://maximo.is/jetsharklambo
   email_address: jetsharklambo+bartcom@gmail.com
-name: BARTcom
-refresh_interval: 1440
